@@ -16,6 +16,7 @@ and https://github.com/MDAnalysis/mdanalysis/wiki/UnitTests
 ??/??/16 orbeckst, jbarnoud, pedrishi, fiona-naughton, jdetle
   * 0.15.0
     - Added test for weighted rmsd (issue #814)
+    - removed biopython PDB parser for coordinates and topology (Issue #777)
     - metadata update: link download_url to GitHub releases so that
       Depsy recognizes contributors (issue #749) and added
       @richardjgowers as maintainer
